# chp-cli

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/chp-cli/: app.py  proxy.py
src/chp_cli/: __init__.py  app.py  manager.py  proxy.py
