[metadata]
name = chp-cli
version = attr: chp_cli.__version__
summary = configurable-http-proxy command
long_description = file: README.md
author = sul-lee
author-email = surrynet@gmail.com
home-page =
license = Free

[options]
zip_safe = False
package_dir = 
    = src
    locale = src/manager
packages = find:
include_package_data = True
setup_requires = 
    setuptools
tests_require = 
    pytest
install_requires = 
    requests
scripts = 

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose --pyargs tests

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    chp-cli = chp_cli.manager:main
